[project]
name = "knowledge-forge"
version = "0.1.0"
description = "Transforms unstructured documents into structured knowledge graphs for semantic search and visualization. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.3",
    "langchain-neo4j>=0.6.0",
    "langchain-ollama>=1.0.1",
]
